--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>Panda Commerce Website</title>
 </head>
 <body>
-    <header>
+    <header class="container">
+        <!-- navbar start  -->
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container">
                 <a class="navbar-brand" href="#">
@@ -34,6 +35,71 @@
               </div>
             </div>
           </nav>
+        <!-- navbar end  -->
+
+        <!-- slider start  -->
+        <section class="mt-5">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                        
+                        <div class="row bg-info p-5">
+                            <div class="col-7 d-flex align-items-center">
+                                <div>
+                                <h1>Cool Dude Headphone</h1>
+                                <p>This is the best headphone in the world for people who just want to waste time in front of funky world</p>
+                                <h1>$420</h1>
+                                <button class="btn btn-primary">Buy Now</button>
+                                </div>
+                            </div>
+                            <div class="col-5">
+                                <img src="images/banner-images/headphone.png" class="img-fluid" alt="...">
+                            </div>
+                        </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="row bg-info p-5">
+                        <div class="col-7 d-flex align-items-center">
+                            <div>
+                            <h1>X-Box for your living room</h1>
+                            <p>This is the best headphone in the world for people who just want to waste time in front of funky world</p>
+                            <h1>$600</h1>
+                            <button class="btn btn-primary">Buy Now</button>
+                            </div>
+                        </div>
+                        <div class="col-5">
+                            <img src="images/banner-images/xbox.png" class="img-fluid" alt="...">
+                        </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="row bg-info p-5">
+                        <div class="col-7 d-flex align-items-center">
+                            <div>
+                            <h1>Mega LCD TV For Sports</h1>
+                            <p>This is the best headphone in the world for people who just want to waste time in front of funky world</p>
+                            <h1>$1200</h1>
+                            <button class="btn btn-primary">Buy Now</button>
+                            </div>
+                        </div>
+                        <div class="col-5">
+                            <img src="images/banner-images/tv.png" class="img-fluid" alt="...">
+                        </div>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+
+        </section>
+        <!-- slider end  -->
     </header>
 
     <!-- javascript cdn link  -->
