--- a/index.html
+++ b/index.html
@@ -102,6 +102,23 @@
         <!-- slider end  -->
     </header>
 
+    <main>
+        <!-- subscribe section start  -->
+        <section class="container mt-5 mb-5">
+            <div class="container bg-light p-5">
+                <div class="d-flex align-items-center justify-content-center">
+                    <div>
+                        <h1>Let's stay in Touch</h1>
+                        <p>Get updates on sales, specials and more</p>
+                        <p><input type="email" name="" id=""></p>
+                        <button class="btn btn-primary">Submit</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- subscribe section end  -->
+    </main>
+
     <!-- javascript cdn link  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
