--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="container">
         <!-- navbar start  -->
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg bg-light fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt="" class="d-inline-block align-text-top">
@@ -22,13 +22,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#shoes">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
+                    <a class="nav-link" href="#backpack">Backpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Subscribe</a>
+                    <a class="nav-link" href="#subscribe">Subscribe</a>
                   </li>
                  
                 </ul>
@@ -103,21 +103,137 @@
     </header>
 
     <main>
+      <!-- categories start -->
+      <section>
+        <div  class="container my-5">
+          <div class="row g-2">
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="d-flex align-items-center rounded-3 bg-danger ps-4">
+                <h1>Watch</h1>
+                <img src="images/categories/watch.png" alt="">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="d-flex align-items-center rounded-3 bg-success ps-4">
+                <h1>Shoes</h1>
+                <img src="images/categories/shoes.png" alt="">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <div class="d-flex align-items-center rounded-3 bg-primary ps-4">
+                <h1>Bags</h1>
+                <img src="images/categories/bag.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </section>
+      <!-- categories end -->
+
+      <!-- shoes section start  -->
+      <section class="container" id="shoes">
+        <h1>Shoes</h1>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="col">
+            <div class="card shadow-lg p-3 mb-5 bg-body rounded">
+              <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title"> Nike Airmax</h5>
+                <h5>$1000</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <button class="btn btn-primary rounded-2">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-lg p-3 mb-5 bg-body rounded">
+              <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title"> Nike Airmax</h5>
+                <h5>$1000</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <button class="btn btn-primary rounded-2">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-lg p-3 mb-5 bg-body rounded">
+              <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title"> Nike Airmax</h5>
+                <h5>$1000</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                <button class="btn btn-primary rounded-2">Buy Now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- shoes section end  -->
+
+      <!-- backpack section start  -->
+      <section class="container" id="backpack">
+        <h1>Bagpack</h1>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="col">
+            <div class="card shadow-lg p-3 mb-5 bg-body rounded">
+              <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Airmax Bag</h5>
+                <h5>$1000</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <button class="btn btn-primary rounded-2">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-lg p-3 mb-5 bg-body rounded">
+              <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Airmax Bag</h5>
+                <h5>$1000</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <button class="btn btn-primary rounded-2">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-lg p-3 mb-5 bg-body rounded">
+              <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Airmax Bag</h5>
+                <h5>$1000</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                <button class="btn btn-primary rounded-2">Buy Now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        
+      </section>
+      <!-- backpack section end  -->
+
         <!-- subscribe section start  -->
-        <section class="container mt-5 mb-5">
+        <section class="container mt-5 mb-5" id="subscribe">
             <div class="container bg-light p-5">
                 <div class="d-flex align-items-center justify-content-center">
                     <div>
                         <h1>Let's stay in Touch</h1>
                         <p>Get updates on sales, specials and more</p>
-                        <p><input type="email" name="" id=""></p>
-                        <button class="btn btn-primary">Submit</button>
+                        <form>
+                          <div><input type="email" class="form-control" name="" id=""></div>
+                          <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
                     </div>
                 </div>
             </div>
         </section>
         <!-- subscribe section end  -->
     </main>
+    <footer class="text-center mt-5">
+      <p><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+    </footer>
 
     <!-- javascript cdn link  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
