--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- bootstrap cdn link  -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <!-- custom css stylesheet  -->
+    <link rel="stylesheet" href="css/style.css">
     <title>Panda Commerce Website</title>
 </head>
 <body>
     <header class="container">
         <!-- navbar start  -->
-        <nav class="navbar navbar-expand-lg bg-light fixed-top">
+        <nav class="navbar navbar-expand-lg bg-light container fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt="" class="d-inline-block align-text-top">
@@ -43,7 +45,7 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                         
-                        <div class="row bg-info p-5">
+                        <div class="row p-5 panda-bg">
                             <div class="col-7 d-flex align-items-center">
                                 <div>
                                 <h1>Cool Dude Headphone</h1>
@@ -55,10 +57,10 @@
                             <div class="col-5">
                                 <img src="images/banner-images/headphone.png" class="img-fluid" alt="...">
                             </div>
-                        </div>
-                  </div>
+                         </div>
+                   </div>
                   <div class="carousel-item">
-                    <div class="row bg-info p-5">
+                    <div class="row p-5 panda-bg">
                         <div class="col-7 d-flex align-items-center">
                             <div>
                             <h1>X-Box for your living room</h1>
@@ -73,7 +75,7 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <div class="row bg-info p-5">
+                    <div class="row panda-bg p-5">
                         <div class="col-7 d-flex align-items-center">
                             <div>
                             <h1>Mega LCD TV For Sports</h1>
@@ -108,13 +110,13 @@
         <div  class="container my-5">
           <div class="row g-2">
             <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="d-flex align-items-center rounded-3 bg-danger ps-4">
+              <div class="d-flex align-items-center rounded-3 bg-warning ps-4">
                 <h1>Watch</h1>
                 <img src="images/categories/watch.png" alt="">
               </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="d-flex align-items-center rounded-3 bg-success ps-4">
+              <div class="d-flex align-items-center rounded-3 bg-danger ps-4">
                 <h1>Shoes</h1>
                 <img src="images/categories/shoes.png" alt="">
               </div>
@@ -142,7 +144,7 @@
                 <h5 class="card-title"> Nike Airmax</h5>
                 <h5>$1000</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <button class="btn btn-primary rounded-2">Buy Now</button>
+                <button class="btn buy-now-btn rounded-2">Buy Now</button>
               </div>
             </div>
           </div>
@@ -153,7 +155,7 @@
                 <h5 class="card-title"> Nike Airmax</h5>
                 <h5>$1000</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <button class="btn btn-primary rounded-2">Buy Now</button>
+                <button class="btn buy-now-btn rounded-2">Buy Now</button>
               </div>
             </div>
           </div>
@@ -164,7 +166,7 @@
                 <h5 class="card-title"> Nike Airmax</h5>
                 <h5>$1000</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-                <button class="btn btn-primary rounded-2">Buy Now</button>
+                <button class="btn buy-now-btn rounded-2">Buy Now</button>
               </div>
             </div>
           </div>
@@ -183,7 +185,7 @@
                 <h5 class="card-title">Airmax Bag</h5>
                 <h5>$1000</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <button class="btn btn-primary rounded-2">Buy Now</button>
+                <button class="btn buy-now-btn rounded-2">Buy Now</button>
               </div>
             </div>
           </div>
@@ -194,7 +196,7 @@
                 <h5 class="card-title">Airmax Bag</h5>
                 <h5>$1000</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <button class="btn btn-primary rounded-2">Buy Now</button>
+                <button class="btn buy-now-btn rounded-2">Buy Now</button>
               </div>
             </div>
           </div>
@@ -205,7 +207,7 @@
                 <h5 class="card-title">Airmax Bag</h5>
                 <h5>$1000</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-                <button class="btn btn-primary rounded-2">Buy Now</button>
+                <button class="btn buy-now-btn rounded-2">Buy Now</button>
               </div>
             </div>
           </div>
@@ -216,7 +218,7 @@
 
         <!-- subscribe section start  -->
         <section class="container mt-5 mb-5" id="subscribe">
-            <div class="container bg-light p-5">
+            <div class="container panda-bg p-5">
                 <div class="d-flex align-items-center justify-content-center">
                     <div>
                         <h1>Let's stay in Touch</h1>
